<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@drawable/background_calculator">

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="#0c0a09"
            android:fontFamily="@font/rubik_variablefont_wght"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_number_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:paddingHorizontal="10dp"
            android:maxLines="1"
            android:textSize="70sp"
            android:fontFamily="@font/rubik_variablefont_wght"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="#0c0a09"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_history"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/img_straighten"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/ic_straighten"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <ImageView
                    android:id="@+id/img_backspace"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_backspace"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:background="#0c0a09"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/tv_delete_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/delete"
                android:textSize="30sp"
                android:textColor="#0c0a09"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_plus_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/plus_minus"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/percent"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/division"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="#0c0a09"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/tv_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/seven"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"
                tools:ignore="NestedWeights"
                android:focusable="true" />

            <TextView
                android:id="@+id/tv_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/eight"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/nine"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_multiplicacion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/multiplication"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/tv_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/four"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/five"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/six"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/minus"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="#0c0a09"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/one"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/two"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/three"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/plus"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/tv_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/zero"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_spot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_gray"
                android:clickable="true"
                android:text="@string/spot"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="#0c0a09"/>

            <TextView
                android:id="@+id/tv_equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ripple_effect_black"
                android:clickable="true"
                android:text="@string/equals"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#0c0a09"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>